# website-wasm

./: Cargo.toml  README.md  build.sh  run.sh
scss/: animations.scss  article.scss  base.scss  cards.scss  codeblock.scss  colors.scss  constants.scss  fonts.scss  footer.scss  gen_css.sh  hamburger.scss  header.scss  home.scss  horizontal_card.scss  menustrip.scss  project.scss  sidebar.scss  social.scss  tag.scss  vertical_card.scss
src/: app_router.rs  lib.rs  routes.rs
src/components/: contribution_card.rs  contribution_list.rs  experience_card.rs  experience_header.rs  experience_list.rs  footer.rs  header.rs  home_header.rs  menu_strip.rs  mod.rs  project_card.rs  project_header.rs  project_list.rs  social_links.rs
src/data/: contribution_list.rs  experience_list.rs  extracurricular_list.rs  header_links.rs  mod.rs  project_list.rs  routes.rs
src/data/experiences/: ibm.rs  mod.rs  ops.rs  spiretrading.rs  uoft.rs
src/data/projects/: game_of_life.rs  joshuto.rs  mod.rs  ruiji.rs  space_farmer_bot.rs  website.rs
src/pages/: experience_details.rs  experience_list.rs  home.rs  mod.rs  page_template.rs  project_details.rs  project_list.rs
static/: index.html
